--- a/index.html
+++ b/index.html
@@ -5,8 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="home.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@500&family=Cormorant+Garamond:ital,wght@1,600&family=Tangerine:wght@700&family=Teko:wght@600&display=swap" rel="stylesheet">
+
+     <nav>Porfolio/Page</nav>
     <title> Welcome to the website</title>
-    <a href="https://www.youtube.com/watch?v=xvFZjo5PgG0">no need to click here!!</a>
+    <a href="https://www.linkedin.com/in/aanya-singh-dhaka-969585249/">Contact me</a>
 </head>
     <body>
         <h1>Welcome to my website</h1>
@@ -84,5 +89,3 @@
     
     </body>
 </html>
-
-
