--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
      <nav>
-                <img src="images/Black & White Minimalist Aesthetic Initials Font Logo - Copy.png" class="logo">
+                <img src="/Black & White Minimalist Aesthetic Initials Font Logo - Copy.png" class="logo">
                 <ul id="sidemenu">
                     <li><a href="#Header">Home</a></li>
                     <li><a href="#about">About</a></li>
