--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="container">
             <div class="row">
                 <div class="about-col-1">
-                    <img src="images/profile-pic (4).png">
+                    <img src="profile-pic (4).png">
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">About Me</h1>
@@ -137,7 +137,7 @@
             <div class="work-list">
 
                 <div class="work">
-                    <img src="images/image1project.jpg">
+                    <img src="image1project.jpg">
                     <div class="layer">
                         <h3>
                             Twitter Sentiment Analysis Model</h3>
@@ -149,7 +149,7 @@
                     </div>
                 </div>
                 <div class="work">
-                    <img src="images/image2project.jpg">
+                    <img src="image2project.jpg">
                     <div class="layer">
                         <h3>Museum of Candy Web Page</h3>
                         <p>
@@ -160,7 +160,7 @@
                     </div>
                 </div>
                 <div class="work">
-                    <img src="images/image3project.jpg">
+                    <img src="image3project.jpg">
                     <div class="layer">
                         <h3>Tribute Page</h3>
                         <p>
